# athena

./: .gitattributes  .gitignore  .gitleaks.toml  AI_COLLABORATION_PROTOCOL.md  AI_QUICKSTART.md  AI_README_FIRST.md  ATHENA_COLLABORATION_CHEATSHEET.md  CLAUDE.md  CONCEPT_MANIFEST.md  FUTURE_WORK.md  LICENSE  MIGRATION_TO_DOMAINS.md  README.md  ROLES.md  START_HERE.md  VISION_AND_REALITY.md  \  architecture_summary.md  create_prs.sh  execution-plan-top5.md  foo.sh  redact-secrets.sh  test-file-event.txt  test-small-file.txt
ai-collab/: AI_CHEATSHEET.md  README_AI.md
ash_chat/: .env.example  .gitignore  CHEATSHEET.md  CONVERSATION_ARCHAEOLOGY_EXAMPLE.md  FINAL_NOTES.md  FUTURE_WORK.md  MULTI_AGENT_CHAT_EXPERIENCE.md  OPENROUTER_SETUP.md  PERSISTENCE_LESSONS_LEARNED.md  PERSISTENCE_QUICK_REFERENCE.md  PERSISTENCE_SUMMARY.md  README.md  SESSION_SUMMARY.md  TESTING.md  add_sqlite.exs  ash_chat.db  check_data.exs  (+54 more)
dev-tools/dev-tools/mcp-neo4j/servers/mcp-neo4j-cloud-aura-api/: Dockerfile  README.md  pyproject.toml  test.sh
dev-tools/dev-tools/mcp-neo4j/servers/mcp-neo4j-cloud-aura-api/src/mcp_neo4j_aura_manager/: __init__.py  server.py
dev-tools/dev-tools/mcp-neo4j/servers/mcp-neo4j-cloud-aura-api/tests/: test_aura_integration.py  test_aura_manager.py  test_utils.py
dev-tools/dev-tools/mcp-neo4j/servers/mcp-neo4j-memory/: Dockerfile  README.md  pyproject.toml  test.sh
dev-tools/dev-tools/mcp-neo4j/servers/mcp-neo4j-memory/src/mcp_neo4j_memory/: __init__.py  server.py
dev-tools/dev-tools/mcp-neo4j/servers/mcp-neo4j-memory/tests/: test_neo4j_memory_integration.py
(+1490 files in other folders)
